--- a/donate.html
+++ b/donate.html
@@ -6,35 +6,35 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bc9d0eb6.js">
+		<link href="./_app/immutable/assets/_page.c38c700b.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/link.3c7701a9.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2e572698.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.41066426.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.559e1a58.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.731ef372.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.cd7a7f11.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.f599e58d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3285dae4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2715b060.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/text.56460d9b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.35d4a068.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.20a39f35.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.b9c7cb76.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/meta.bea0a12c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.a819c569.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.30544586.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/meta.45203a3a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.2fa01090.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.e45c2c54.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
 
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
-<h1 class="svelte-gy8nzu">Поддержите свободу в Санкт-Петербурге!</h1>
-<p class="svelte-gy8nzu"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="256" height="146" fill="none"><path fill="#A58E60" d="M256 1.771h-39.246v71.52H256V1.772Z"/><path fill="#C2A86F" d="M192.771 5.795c-10.344-3.805-23.153-4.08-34.048-5.16-9.23-.676-16.355-1.21-24.332.577-.76.201-1.559.402-2.372.608l-.022.021a594.655 594.655 0 0 1-12.402 2.923c-28.106 6.334-62.316 12.432-87.614 18.872C23.952 26.026 9.462 29.196 0 30a25.865 25.865 0 0 0 1.817 5.243c4.618 9.732 14.198 11.86 21.925 11.467a44.435 44.435 0 0 0 3.858-.389c-2.91 1.083-5.845 1.979-8.672 3.687a20.414 20.414 0 0 0-4.246 3.394c1.988 2.342 3.753 3.194 7.248 5.08 4.831 2.617 12.782 1.787 18.037.957 5.434-.856 12.358-4.504 17.614-6.39 4.425-1.534 10.894-3.172 16.434-4.706-.075.28-.166.555-.228.83-2.647 11.376-4.093 22.315-6.364 29.343 7.78 14.228 14.018 27.426 21.44 40.238 11.633-9.274 7.606-26.892-.843-40.465.887-5.788 4.141-17.56 6.103-23.576 14.267-7.374 24.38-14.945 39.006-12.857 12.153 2.014 33.541-.026 41.897 8.405-3.599 11.297-16.346 17.85-22.764 27.185-7.395 9.537-9.54 23.454-.201 31.658 10.769-10.847 13.014-21.374 27.919-28.923 13.94-7.064 27.08-2.564 36.765-12.961V7.83c-7.771 1.136-17.006.455-23.974-2.035Z"/><path fill="#C2A86F" d="M122.609 145.026c15.325 0 27.749-12.423 27.749-27.748 0-15.325-12.424-27.749-27.749-27.749s-27.748 12.424-27.748 27.749 12.423 27.748 27.748 27.748Z"/><path fill="#A58E60" d="m123.343 133.013-.917-3.263c-.087-.315-.087-.315-.398-.228-1.957.551-3.918 1.097-5.875 1.647-.337.092-.341.092-.433-.24-.231-.817-.458-1.634-.685-2.451-.083-.301-.07-.323.227-.406.428-.122.856-.24 1.271-.397.594-.223.812-.608.699-1.232-.07-.376-.171-.739-.271-1.106-1.096-3.909-2.189-7.819-3.289-11.729-.097-.341-.21-.677-.324-1.013-.183-.529-.646-.778-1.205-.682-.463.079-.913.206-1.363.341-.201.061-.293.009-.35-.192-.231-.857-.472-1.713-.721-2.565-.065-.218.009-.301.219-.358 1.97-.546 3.936-1.101 5.902-1.651.332-.092.332-.096.24-.428-.275-.987-.546-1.975-.835-2.962-.069-.232-.013-.328.223-.393.852-.223 1.7-.463 2.543-.712.244-.074.323 0 .384.227.271 1.005.564 2.005.834 3.01.062.231.158.275.376.205.437-.14.887-.253 1.328-.376.315-.087.315-.087.227-.393-.27-.97-.546-1.944-.817-2.913-.104-.376-.104-.376.28-.485.799-.223 1.603-.45 2.403-.673.354-.101.354-.096.45.245.288 1.035.585 2.066.865 3.101.061.232.17.288.397.254 1.485-.241 2.927-.11 4.299.554a4.775 4.775 0 0 1 1.655 1.35c1.009 1.289 1.328 2.744.948 4.334-.271 1.153-.908 2.088-1.782 2.878-.253.232-.533.433-.782.691.406.017.813.026 1.219.048.9.052 1.76.262 2.538.721.991.585 1.738 1.402 2.197 2.468.9 2.097.59 4.058-.699 5.884-.887 1.254-2.123 2.084-3.521 2.678-.223.096-.288.192-.218.432.336 1.154.651 2.316.974 3.473-1.04.293-2.084.586-3.123.874-.035-.101-.07-.197-.097-.297-.279-.996-.567-1.988-.83-2.984-.065-.244-.161-.288-.388-.209-.389.126-.791.227-1.189.336-.489.14-.454.07-.318.555.288 1.048.576 2.101.869 3.149-1.053.302-2.097.59-3.137.883Zm-1.393-11.026c.004 0 .004 0 .009-.005.17.616.336 1.232.519 1.84.105.353.175.725.35 1.057.166.319.349.393.694.327.844-.161 1.66-.41 2.477-.659.677-.206 1.346-.441 1.962-.813 1.97-1.184 1.979-3.853.498-5.172-.69-.616-1.551-.703-2.438-.625-.524.048-1.031.184-1.542.302-1.061.244-2.101.581-3.154.856-.127.035-.166.092-.127.231.258.887.503 1.774.752 2.661Zm-2.451-8.776c.218.786.45 1.568.655 2.354.061.24.166.284.393.214.547-.17 1.101-.319 1.656-.467.9-.236 1.778-.533 2.612-.935 1.228-.59 1.835-1.568 1.687-2.791-.144-1.184-.926-2.11-2.154-2.224-.764-.07-1.511.092-2.245.275-1.027.258-2.036.568-3.058.839-.227.061-.275.157-.21.376.232.786.446 1.572.664 2.359Z"/></svg><!-- HTML_TAG_END --></p>
-<p class="svelte-gy8nzu">Пополните казну регионального отделения Либертарианской партии России.</p>
+<h1 class="svelte-keu6bs">Поддержите свободу в Санкт-Петербурге!</h1>
+<p class="svelte-keu6bs"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="256" height="146" fill="none"><path fill="#A58E60" d="M256 1.771h-39.246v71.52H256V1.772Z"/><path fill="#C2A86F" d="M192.771 5.795c-10.344-3.805-23.153-4.08-34.048-5.16-9.23-.676-16.355-1.21-24.332.577-.76.201-1.559.402-2.372.608l-.022.021a594.655 594.655 0 0 1-12.402 2.923c-28.106 6.334-62.316 12.432-87.614 18.872C23.952 26.026 9.462 29.196 0 30a25.865 25.865 0 0 0 1.817 5.243c4.618 9.732 14.198 11.86 21.925 11.467a44.435 44.435 0 0 0 3.858-.389c-2.91 1.083-5.845 1.979-8.672 3.687a20.414 20.414 0 0 0-4.246 3.394c1.988 2.342 3.753 3.194 7.248 5.08 4.831 2.617 12.782 1.787 18.037.957 5.434-.856 12.358-4.504 17.614-6.39 4.425-1.534 10.894-3.172 16.434-4.706-.075.28-.166.555-.228.83-2.647 11.376-4.093 22.315-6.364 29.343 7.78 14.228 14.018 27.426 21.44 40.238 11.633-9.274 7.606-26.892-.843-40.465.887-5.788 4.141-17.56 6.103-23.576 14.267-7.374 24.38-14.945 39.006-12.857 12.153 2.014 33.541-.026 41.897 8.405-3.599 11.297-16.346 17.85-22.764 27.185-7.395 9.537-9.54 23.454-.201 31.658 10.769-10.847 13.014-21.374 27.919-28.923 13.94-7.064 27.08-2.564 36.765-12.961V7.83c-7.771 1.136-17.006.455-23.974-2.035Z"/><path fill="#C2A86F" d="M122.609 145.026c15.325 0 27.749-12.423 27.749-27.748 0-15.325-12.424-27.749-27.749-27.749s-27.748 12.424-27.748 27.749 12.423 27.748 27.748 27.748Z"/><path fill="#A58E60" d="m123.343 133.013-.917-3.263c-.087-.315-.087-.315-.398-.228-1.957.551-3.918 1.097-5.875 1.647-.337.092-.341.092-.433-.24-.231-.817-.458-1.634-.685-2.451-.083-.301-.07-.323.227-.406.428-.122.856-.24 1.271-.397.594-.223.812-.608.699-1.232-.07-.376-.171-.739-.271-1.106-1.096-3.909-2.189-7.819-3.289-11.729-.097-.341-.21-.677-.324-1.013-.183-.529-.646-.778-1.205-.682-.463.079-.913.206-1.363.341-.201.061-.293.009-.35-.192-.231-.857-.472-1.713-.721-2.565-.065-.218.009-.301.219-.358 1.97-.546 3.936-1.101 5.902-1.651.332-.092.332-.096.24-.428-.275-.987-.546-1.975-.835-2.962-.069-.232-.013-.328.223-.393.852-.223 1.7-.463 2.543-.712.244-.074.323 0 .384.227.271 1.005.564 2.005.834 3.01.062.231.158.275.376.205.437-.14.887-.253 1.328-.376.315-.087.315-.087.227-.393-.27-.97-.546-1.944-.817-2.913-.104-.376-.104-.376.28-.485.799-.223 1.603-.45 2.403-.673.354-.101.354-.096.45.245.288 1.035.585 2.066.865 3.101.061.232.17.288.397.254 1.485-.241 2.927-.11 4.299.554a4.775 4.775 0 0 1 1.655 1.35c1.009 1.289 1.328 2.744.948 4.334-.271 1.153-.908 2.088-1.782 2.878-.253.232-.533.433-.782.691.406.017.813.026 1.219.048.9.052 1.76.262 2.538.721.991.585 1.738 1.402 2.197 2.468.9 2.097.59 4.058-.699 5.884-.887 1.254-2.123 2.084-3.521 2.678-.223.096-.288.192-.218.432.336 1.154.651 2.316.974 3.473-1.04.293-2.084.586-3.123.874-.035-.101-.07-.197-.097-.297-.279-.996-.567-1.988-.83-2.984-.065-.244-.161-.288-.388-.209-.389.126-.791.227-1.189.336-.489.14-.454.07-.318.555.288 1.048.576 2.101.869 3.149-1.053.302-2.097.59-3.137.883Zm-1.393-11.026c.004 0 .004 0 .009-.005.17.616.336 1.232.519 1.84.105.353.175.725.35 1.057.166.319.349.393.694.327.844-.161 1.66-.41 2.477-.659.677-.206 1.346-.441 1.962-.813 1.97-1.184 1.979-3.853.498-5.172-.69-.616-1.551-.703-2.438-.625-.524.048-1.031.184-1.542.302-1.061.244-2.101.581-3.154.856-.127.035-.166.092-.127.231.258.887.503 1.774.752 2.661Zm-2.451-8.776c.218.786.45 1.568.655 2.354.061.24.166.284.393.214.547-.17 1.101-.319 1.656-.467.9-.236 1.778-.533 2.612-.935 1.228-.59 1.835-1.568 1.687-2.791-.144-1.184-.926-2.11-2.154-2.224-.764-.07-1.511.092-2.245.275-1.027.258-2.036.568-3.058.839-.227.061-.275.157-.21.376.232.786.446 1.572.664 2.359Z"/></svg><!-- HTML_TAG_END --></p>
+<p class="svelte-keu6bs">Пополните казну регионального отделения Либертарианской партии России.</p>
 
-<nav><a href="./donate/once" class=" svelte-1ai65o1" target="_self" rel="">Разовое пожертвование
+<nav class="svelte-keu6bs"><a href="./donate/once" class=" svelte-1ya45z4" target="_self" rel="">Разовое пожертвование
 </a>
-	<a href="./donate/long" class=" svelte-1ai65o1" target="_self" rel="">Регулярное пожертвование
+	<a href="./donate/long" class=" svelte-1ya45z4" target="_self" rel="">Регулярное пожертвование
 </a>
 </nav></div>
 	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
@@ -43,26 +43,7 @@
 		<ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
 	<li><a href="https://twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
 	<li><a href="https://vk.com/spblpr" target="_blank" aria-label="VK ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#507299" d="M0 0h42v42H0z"/><path fill="#fff" d="M22.426 25.471a.646.646 0 0 0 .476-.204.66 3.663 0 0 0 .136-.408s0-1.342.612-1.546c.611-.204 1.427 1.275 2.243 1.818a1.87 1.87 0 0 0 1.156.34h2.244s1.155 0 .611-1.002a8.346 8.346 0 0 0-1.7-1.887c-1.427-1.275-1.223-1.07.477-3.298 1.02-1.342 1.427-2.158 1.36-2.566-.069-.408-.884-.272-.884-.272h-2.499a.918.918 0 0 0-.34 0 .527.527 0 0 0-.204.272c-.262.677-.58 1.33-.952 1.955-1.155 1.886-1.563 1.954-1.7 1.886-.135-.068-.34-1.07-.34-1.7 0-1.818.273-2.566-.543-2.77a3.926 3.926 0 0 0-1.377-.05 5.949 5.949 0 0 0-2.108.203c-.272.136-.544.476-.408.476.285.007.555.13.748.34.185.35.279.742.272 1.139 0 0 .136 2.158-.34 2.43-.476.272-.816-.204-1.835-1.886a10.997 10.997 0 0 1-.884-1.82.527.527 0 0 0-.187-.271.68.68 0 0 0-.408-.136h-2.448a.85.85 0 0 0-.544.136c-.136.136 0 .408 0 .408a27.195 27.195 0 0 0 4.08 6.544 5.864 5.864 0 0 0 4.215 1.886l1.07-.017z"/></g></svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://instagram.com/spblpr" target="_blank" aria-label="Instagram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42">
-    <defs>
-        <radialGradient id="b" cx="22.169%" cy="100%" r="75.942%" fx="22.169%" fy="100%">
-            <stop offset="0%" stop-color="#ffc85a" />
-            <stop offset="100%" stop-color="#f24a75" />
-        </radialGradient>
-        <linearGradient id="a" x1="50%" x2="50%" y1="0%" y2="96.71%">
-            <stop offset="0%" stop-color="#5974f6" />
-            <stop offset="100%" stop-color="#f24a75" />
-        </linearGradient>
-    </defs>
-    <g fill="none">
-        <path fill="url(#a)" d="M0 0h42v42H0z" />
-        <path fill="url(#b)" d="M0 0h42v42H0z" />
-        <path fill="#fff"
-            d="M12 17.199A5.199 5.199 0 0 1 17.199 12H24.8a5.199 5.199 0 0 1 5.2 5.199V24.8a5.199 5.199 0 0 1-5.199 5.2H17.2a5.199 5.199 0 0 1-5.2-5.199V17.2zm1.63.155v7.292a3.725 3.725 0 0 0 3.724 3.725h7.292a3.725 3.725 0 0 0 3.725-3.725v-7.292a3.725 3.725 0 0 0-3.725-3.725h-7.292a3.725 3.725 0 0 0-3.725 3.725zm7.342 8.355a4.737 4.737 0 1 1 0-9.474 4.737 4.737 0 0 1 0 9.474zm0-1.686a3.05 3.05 0 1 0 0-6.102 3.05 3.05 0 0 0 0 6.102z" />
-        <circle cx="25.263" cy="15.789" r="1" fill="#fff" />
-    </g>
-</svg><!-- HTML_TAG_END --></a></li>
-	<li><a href="https://facebook.com/spblpr" target="_blank" aria-label="Facebook ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#39579a" d="M0 0h42v42H0z"/><path fill="#fff" d="M22 17.34v.663h3l-.23 3H22V29h-3.003v-7.997H17v-3h2l-.003-1.666s.34-3.668 3.003-3.937h3V15h-1.337c-.2 0-1.663-.29-1.663 2.34z"/></g></svg><!-- HTML_TAG_END --></a></li>
+	
 	<li><a href="https://youtube.com/spblpr" target="_blank" aria-label="YouTube ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#f33" d="M0 0h42v42H0z"/><path fill="#fff" d="m17 27.489 10.645-6.148L17 15.194z"/></g></svg><!-- HTML_TAG_END --></a></li>
 </ul></div>
 </div>
@@ -71,7 +52,7 @@
 			
 			<script>
 				{
-					__sveltekit_znbxeh = {
+					__sveltekit_1fcu83d = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -81,10 +62,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bc9d0eb6.js"),
-						import("./_app/immutable/entry/app.731ef372.js")
+						import("./_app/immutable/entry/start.2e572698.js"),
+						import("./_app/immutable/entry/app.3285dae4.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_znbxeh.element, {
+						kit.start(app, __sveltekit_1fcu83d.element, {
 							node_ids: [0, 2, 4],
 							data,
 							form: null,
