--- a/donate.html
+++ b/donate.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.c38c700b.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.3c7701a9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2e572698.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7ea30e26.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.559e1a58.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b74ce320.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3285dae4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.2715b060.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3f5916c5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.e9ee0323.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.56460d9b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.35d4a068.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/constants.20a39f35.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.891dc29c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/constants.f382b95a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.30544586.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/meta.45203a3a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.7650be56.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/meta.cc1a1bf4.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.2fa01090.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.e45c2c54.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
@@ -52,7 +52,7 @@
 			
 			<script>
 				{
-					__sveltekit_1fcu83d = {
+					__sveltekit_vrjkhq = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -62,10 +62,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2e572698.js"),
-						import("./_app/immutable/entry/app.3285dae4.js")
+						import("./_app/immutable/entry/start.7ea30e26.js"),
+						import("./_app/immutable/entry/app.3f5916c5.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1fcu83d.element, {
+						kit.start(app, __sveltekit_vrjkhq.element, {
 							node_ids: [0, 2, 4],
 							data,
 							form: null,
